deployment-yamls/deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: superset-web
  namespace: apps-public
  labels:
    app.kubernetes.io/name: superset-web
    app.kubernetes.io/instance: superset
    app: superset-web
    release: superset
spec:
  replicas: 1
  selector:
    matchLabels:
      app: superset-web
      release: superset
  template:
    metadata:
      labels:
        app.kubernetes.io/name: superset-web
        app.kubernetes.io/instance: superset
        app: superset-web
        release: superset
        azure.workload.identity/use: 'true'       
    spec:
      serviceAccountName: superset
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
      containers:
      - name: superset
        image: paacrr2sjis.azurecr.io/pa-superset:5.0.0rc2-2025.0416.930
        imagePullPolicy: IfNotPresent
        command: ["/bin/sh","-c", ". /app/pythonpath/superset_bootstrap.sh; /usr/bin/run-server.sh"]
        securityContext:
          runAsNonRoot: true
          runAsUser: 1000
          runAsGroup: 1000
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
        resources:
          requests:
            cpu: "100m"
            memory: "512Mi"
          limits:
            cpu: "1500m"
            memory: "2048Mi"
        volumeMounts:
          - name: tmp
            mountPath: /tmp
          - name: superset-files
            mountPath: "/app/pythonpath"
            readOnly: true
          - name: secrets-store-inline
            mountPath: /var/run/secrets/keyvault
            readOnly: true
        ports:
          - name: http
            containerPort: 8088
            protocol: TCP
        startupProbe:
          failureThreshold: 60
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 15
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 15
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 1
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 15
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 1
      volumes:
        - name: tmp
          emptyDir: {}
        - name: superset-env
          configMap:
            name: superset-env
        - name: superset-files
          secret:
            secretName: superset-files
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: superset-spc
