deployment-yamls/deployment-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: superset-worker
  namespace: apps-public
  labels:
    app.kubernetes.io/name: superset-worker
    app.kubernetes.io/instance: superset
    app: superset-worker
    release: superset
spec:
  replicas: 1
  selector:
    matchLabels:
      app: superset-worker
      release: superset
  template:
    metadata:
      annotations:
      labels:
        app.kubernetes.io/name: superset-worker
        app.kubernetes.io/instance: superset
        app: superset-worker
        release: superset
        azure.workload.identity/use: 'true'       
    spec:
      serviceAccountName: superset
      securityContext:
        runAsUser: 1001
      containers:
        - name: superset
          image: "xxacrr2sjis.azurecr.io/xx-superset:latest"
          imagePullPolicy: IfNotPresent
          command: ["/bin/sh","-c", ". /app/pythonpath/superset_bootstrap.sh; celery --app=superset.tasks.celery_app:app worker"]
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "1500m"
              memory: "2048Mi"
          volumeMounts:
            - name: superset-files
              mountPath: "/app/pythonpath"
              readOnly: true
            - name: secrets-store-inline
              mountPath: /var/run/secrets/keyvault
              readOnly: true
          livenessProbe:
            exec:
              command: ["/bin/sh","-c", ". /app/pythonpath/superset_bootstrap.sh; celery -A superset.tasks.celery_app:app inspect ping -d celery@$HOSTNAME"]
            failureThreshold: 3
            initialDelaySeconds: 120
            periodSeconds: 60
            successThreshold: 1
            timeoutSeconds: 60
      volumes:
        - name: superset-env
          configMap:
            name: superset-env
        - name: superset-files
          secret:
            secretName: superset-files
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: superset-spc
